--- a/backend/views/user/about.ejs
+++ b/backend/views/user/about.ejs
@@ -249,11 +249,21 @@
                   <% } %>
                 </div>
               </div>
-            </li>
-      
-                     <li class="navigation__item">
-              <a href="/about" class="navigation__link">About</a>
-            </li>
+              <li class="navigation__item">
+                <a href="/about" class="navigation__link">About</a>
+              </li>
+              <li class="navigation__item">
+                <a href="/account" class="navigation__link">Account</a>
+              </li>
+              <li class="navigation__item">
+                <a href="/orders" class="navigation__link">Orders</a>
+              </li>
+              <li class="navigation__item">
+                <a href="/cart" class="navigation__link">Cart</a>
+              </li>
+              <li class="navigation__item">
+                <a href="/wishlist" class="navigation__link">Wishlist</a>
+              </li>
                 </li>
                      <li class="navigation__item">
               <a href="/blogs" class="navigation__link">blogs</a>
@@ -626,10 +636,6 @@ From concept to fabric, every product is a reflection of our belief that fashion
         <!-- /.products-pagination -->
       </div><!-- /.position-relative -->
     </section>
-
-
-
-
     
   </main>
 
@@ -784,12 +790,6 @@ From concept to fabric, every product is a reflection of our belief that fashion
       </div><!-- /.col-3 -->
     </div><!-- /.row -->
   </footer><!-- /.footer-mobile container position-fixed d-md-none bottom-0 -->
-
-
-
-
-
-
 
 
 
