--- a/backend/views/user/blogDetails.ejs
+++ b/backend/views/user/blogDetails.ejs
@@ -20,10 +20,6 @@
   <link rel="stylesheet" href="/css/style.css" type="text/css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--[if lt IE 9]>
-    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-  <![endif]-->
-
   <!-- Document Title -->
   <title>BLOG DETAILS | STAY RARE</title>
 
@@ -249,9 +245,20 @@
                 </div>
               </div>
             </li>
-      
-                     <li class="navigation__item">
+            <li class="navigation__item">
               <a href="/about" class="navigation__link">About</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/account" class="navigation__link">Account</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/orders" class="navigation__link">Orders</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/cart" class="navigation__link">Cart</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/wishlist" class="navigation__link">Wishlist</a>
             </li>
                 </li>
                      <li class="navigation__item">
@@ -589,10 +596,12 @@
       <div class="col-3">
         <a href="/wishlist" class="footer-mobile__link d-flex flex-column align-items-center">
           <div class="position-relative">
-                     <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><use href="#icon_cart" /></svg>
-            <span class="wishlist-amount d-block position-absolute js-wishlist-count">3</span>
+                    <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <use href="#icon_heart" />
+          </svg>
           </div>
-          <span>Cart</span>
+          <span>Wishlist</span>
         </a>
       </div><!-- /.col-3 -->
             <div class="col-3">
@@ -605,13 +614,6 @@
       </div><!-- /.col-3 -->
     </div><!-- /.row -->
   </footer><!-- /.footer-mobile container position-fixed d-md-none bottom-0 -->
-
-
-
-
-
-
-
 
 
   <!-- Go To Top -->
