--- a/backend/views/user/login.ejs
+++ b/backend/views/user/login.ejs
@@ -329,10 +329,21 @@
                 </div>
               </div>
             </li>
-      
-                     <li class="navigation__item">
-              <a href="/about" class="navigation__link">About</a>
-            </li>
+            <li class="navigation__item">
+                <a href="/about" class="navigation__link">About</a>
+              </li>
+              <li class="navigation__item">
+                <a href="/account" class="navigation__link">Account</a>
+              </li>
+              <li class="navigation__item">
+                <a href="/orders" class="navigation__link">Orders</a>
+              </li>
+              <li class="navigation__item">
+                <a href="/cart" class="navigation__link">Cart</a>
+              </li>
+              <li class="navigation__item">
+                <a href="/wishlist" class="navigation__link">Wishlist</a>
+              </li>
                 </li>
                      <li class="navigation__item">
               <a href="/blogs" class="navigation__link">blogs</a>
@@ -1301,7 +1312,7 @@
       <div class="row row-cols-lg-5 row-cols-2">
         <div class="footer-column footer-store-info col-12 mb-4 mb-lg-0">
  <div>
-  <img class="footer-logo" src="images/stayrare/footer-logo.png" alt="">
+  <img class="footer-logo" src="/images/stayrare/footer-logo.png" alt="">
  </div>
    <p class="footer-address">Stayrare , Thiruvananthapuram, <br> Kerala , India - 695002
 </p>
