--- a/backend/views/user/account.ejs
+++ b/backend/views/user/account.ejs
@@ -342,7 +342,19 @@
 
                         <li class="navigation__item">
                             <a href="/about" class="navigation__link">About</a>
-                        </li>
+                          </li>
+                          <li class="navigation__item">
+                            <a href="/account" class="navigation__link">Account</a>
+                          </li>
+                          <li class="navigation__item">
+                            <a href="/orders" class="navigation__link">Orders</a>
+                          </li>
+                          <li class="navigation__item">
+                            <a href="/cart" class="navigation__link">Cart</a>
+                          </li>
+                          <li class="navigation__item">
+                            <a href="/wishlist" class="navigation__link">Wishlist</a>
+                          </li>
                         </li>
                         <li class="navigation__item">
                             <a href="/blogs" class="navigation__link">blogs</a>
@@ -1200,16 +1212,15 @@
 
             <div class="col-3">
                 <a href="/wishlist" class="footer-mobile__link d-flex flex-column align-items-center">
-                    <div class="position-relative">
+                  <div class="position-relative">
                             <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <use href="#icon_heart" />
-          </svg>
-                        <span class="wishlist-amount d-block position-absolute js-wishlist-count">3</span>
-                    </div>
-                    <span>Wishlist</span>
+                    xmlns="http://www.w3.org/2000/svg">
+                    <use href="#icon_heart" />
+                  </svg>
+                  </div>
+                  <span>Wishlist</span>
                 </a>
-            </div><!-- /.col-3 -->
+              </div><!-- /.col-3 -->
             <div class="col-3">
                 <a href="/account" class="footer-mobile__link d-flex flex-column align-items-center">
                     <div class="position-relative">
