--- a/backend/views/user/blogs.ejs
+++ b/backend/views/user/blogs.ejs
@@ -20,9 +20,7 @@
   <link rel="stylesheet" href="css/style.css" type="text/css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--[if lt IE 9]>
-    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-  <![endif]-->
+
 
   <!-- Document Title -->
   <title>BLOGS | STAY RARE</title>
@@ -250,9 +248,20 @@
                 </div>
               </div>
             </li>
-      
-                     <li class="navigation__item">
+            <li class="navigation__item">
               <a href="/about" class="navigation__link">About</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/account" class="navigation__link">Account</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/orders" class="navigation__link">Orders</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/cart" class="navigation__link">Cart</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/wishlist" class="navigation__link">Wishlist</a>
             </li>
                 </li>
                      <li class="navigation__item">
@@ -619,11 +628,10 @@
           <span>Shop</span>
         </a>
       </div><!-- /.col-3 -->
-
       <div class="col-3">
         <a href="/wishlist" class="footer-mobile__link d-flex flex-column align-items-center">
           <div class="position-relative">
-                          <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
+                    <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <use href="#icon_heart" />
           </svg>
@@ -641,14 +649,6 @@
       </div><!-- /.col-3 -->
     </div><!-- /.row -->
   </footer><!-- /.footer-mobile container position-fixed d-md-none bottom-0 -->
-
-
-
-
-
-
-
-
 
   <!-- Go To Top -->
   <div id="scrollTop" class="visually-hidden end-0"></div>
