--- a/backend/views/user/cart.ejs
+++ b/backend/views/user/cart.ejs
@@ -24,9 +24,6 @@
   <link rel="stylesheet" href="css/style.css" type="text/css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--[if lt IE 9]>
-    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
-  <![endif]-->
 
   <!-- Document Title -->
   <title>CART | STAY RARE</title>
@@ -256,9 +253,20 @@
                 </div>
               </div>
             </li>
-      
-                     <li class="navigation__item">
+            <li class="navigation__item">
               <a href="/about" class="navigation__link">About</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/account" class="navigation__link">Account</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/orders" class="navigation__link">Orders</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/cart" class="navigation__link">Cart</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/wishlist" class="navigation__link">Wishlist</a>
             </li>
                 </li>
                      <li class="navigation__item">
@@ -1285,7 +1293,7 @@
       <div class="col-3">
         <a href="/wishlist" class="footer-mobile__link d-flex flex-column align-items-center">
           <div class="position-relative">
-                              <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
+                    <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <use href="#icon_heart" />
           </svg>
