--- a/backend/views/user/checkout.ejs
+++ b/backend/views/user/checkout.ejs
@@ -616,10 +616,21 @@
                 </div>
               </div>
             </li>
-      
-                     <li class="navigation__item">
-              <a href="/about" class="navigation__link">About</a>
-            </li>
+            <li class="navigation__item">
+                <a href="/about" class="navigation__link">About</a>
+              </li>
+              <li class="navigation__item">
+                <a href="/account" class="navigation__link">Account</a>
+              </li>
+              <li class="navigation__item">
+                <a href="/orders" class="navigation__link">Orders</a>
+              </li>
+              <li class="navigation__item">
+                <a href="/cart" class="navigation__link">Cart</a>
+              </li>
+              <li class="navigation__item">
+                <a href="/wishlist" class="navigation__link">Wishlist</a>
+              </li>
                 </li>
                      <li class="navigation__item">
               <a href="/blogs" class="navigation__link">blogs</a>
@@ -1771,13 +1782,13 @@
           <span>Shop</span>
         </a>
       </div><!-- /.col-3 -->
-
       <div class="col-3">
         <a href="/wishlist" class="footer-mobile__link d-flex flex-column align-items-center">
           <div class="position-relative">
-                   <svg width="20" height="20": class="icon-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/>
-            </svg>
+                    <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <use href="#icon_heart" />
+          </svg>
           </div>
           <span>Wishlist</span>
         </a>
