--- a/backend/views/user/terms-conditions.ejs
+++ b/backend/views/user/terms-conditions.ejs
@@ -424,9 +424,20 @@
                 </div>
               </div>
             </li>
-      
-                     <li class="navigation__item">
+            <li class="navigation__item">
               <a href="/about" class="navigation__link">About</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/account" class="navigation__link">Account</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/orders" class="navigation__link">Orders</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/cart" class="navigation__link">Cart</a>
+            </li>
+            <li class="navigation__item">
+              <a href="/wishlist" class="navigation__link">Wishlist</a>
             </li>
                 </li>
                      <li class="navigation__item">
