--- a/backend/views/user/checkout.ejs
+++ b/backend/views/user/checkout.ejs
@@ -335,6 +335,7 @@
 
         .btn-primary:hover {
             background-color: var(--primary-hover);
+            color: yellow;
         }
 
         .btn-block {
