--- a/backend/views/user/checkout.ejs
+++ b/backend/views/user/checkout.ejs
@@ -805,8 +805,8 @@
             <nav class="breadcrumb-nav">
                 <div class="container">
                     <ul class="breadcrumb shop-breadcrumb bb-no">
-                        <li class="passed"><a href="/cart">Shopping Cart</a></li>
-                        <li class="active"><a href="/checkout">Checkout</a></li>
+                        <li class="passed"><a href="/cart">Shopping Cart </a> </li>
+                        <li class="active"><a href="/checkout"> / Checkout</a> </li>
 
                     </ul>
                 </div>
