--- a/backend/views/user/return-policy.ejs
+++ b/backend/views/user/return-policy.ejs
@@ -487,9 +487,14 @@
           <div class="mb-5">
             <h2 class="h4 fw-semibold mb-3 text-secondary">Non-Returnable Items</h2>
             <ul class="list-group list-group-flush mb-0">
-              <li class="list-group-item">Products with discounts greater than 30%</li>
-              <li class="list-group-item">Or, you can self-ship to the above return address.</li>
-              <li class="list-group-item">Custom-printed or personalized T-shirts (unless defective)</li>
+              <li class="list-group-item">Products purchased with a discount greater than 35%.
+              </li>
+              <li class="list-group-item">Custom-printed or personalized T-shirts (unless defective).
+              </li>
+              <li class="list-group-item">International orders (outside India).
+              </li>
+              <li class="list-group-item">Items that are used, washed, or not in original condition.
+              </li>
             </ul>
           </div>
 
@@ -497,7 +502,8 @@
           <div class="mb-5">
             <h2 class="h4 fw-semibold mb-3 text-secondary">Refunds</h2>
             <ul class="list-group list-group-flush mb-0">
-              <li class="list-group-item">Refunds are credited to your <span class="fw-bold">Wallet</span> by default.</li>
+              <li class="list-group-item">Refunds will be sent directly to the customer’s bank account/UPI after verification and deduction of any applicable charges.
+              </li>
               <li class="list-group-item">Upon customer request, we can process the refund to their bank account (after necessary verification and deduction of any applicable charges).</li>
               <li class="list-group-item">Orders canceled after delivery will include a <span class="fw-bold text-primary">₹75</span> reverse pickup fee (or you can self-ship).</li>
               <li class="list-group-item">Self shipping charges are non-refundable.</li>
