--- a/backend/views/user/store.ejs
+++ b/backend/views/user/store.ejs
@@ -931,7 +931,7 @@
         <div class="breadcrumb mb-0 d-none d-md-block flex-grow-1">
           <a href="/" class="menu-link menu-link_us-s text-uppercase fw-medium">Home</a>
           <span class="breadcrumb-separator menu-link fw-medium ps-1 pe-1">/</span>
-          <a href="/store" class="menu-link menu-link_us-s text-uppercase fw-medium"> Shop</a>
+          <a href="/store" class="menu-link menu-link_us-s text-uppercase fw-medium"> Store</a>
         </div><!-- /.breadcrumb -->
 
         <div class="shop-acs d-flex align-items-center justify-content-between justify-content-md-end flex-grow-1">
